@@ -1,3 +1,7 @@
+2013-12-03	Stephan Linz <linz@li-pro.net>
+
+	* common: dbus: (re-)enable default rule for 1.6.4
+
 2013-12-02	Stephan Linz <linz@li-pro.net>
 
 	* common: HOWTO: add reference note to the right GNU toolchain
